TFT-380: AssertJ is now used in tests.